fixed dark mode issue

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,5 +1,4 @@
 html {
-    background-color: inherit;
     font-family: sans-serif;
     min-height: 100%;
 }
